半沢直樹コンポーザー

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,7 @@
 FROM php:7.2.9-apache
 
 # mod_rewriteを有効にします
-RUN  a2enmod rewrite
+RUN a2enmod rewrite
+
+# ComposerでのパッケージインストールにGitクライアントを使用します。
+RUN apt-get update && apt-get install -y git && apt-get clean
